--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "dependencies": {
     "react": "^15.5.4"
-  }
+  },
+  "name": "react-annotate",
+  "version": "0.0.1",
+  "description": "Annotations",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aaronshaf/react-annotate.git"
+  },
+  "author": "Aaron Shafovaloff <aaronshaf@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/aaronshaf/react-annotate/issues"
+  },
+  "homepage": "https://github.com/aaronshaf/react-annotate#readme"
 }
